k3s_docmost/networking/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: docmost
  labels:
    name: docmost
    monitoring: enabled
