k3s_docmost/networking/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: docmost
  namespace: docmost

spec:
  ingressClassName: traefik

  rules:
    - host: docmost.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: docmost

                port:
                  number: 3000
